<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/menu_delete_all"
        app:showAsAction="ifRoom"
        android:icon="@drawable/delete_all"/>

    <item
        android:id="@+id/action_filter"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/filter_new">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/menu_sort_name"
                android:icon="@drawable/sort_name"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_sort_id"
                android:title="@string/menu_sort_id"
                android:icon="@drawable/sort_id"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_switch"
        android:actionLayout="@layout/switch_layout"
        android:title="@string/menu_switch"
        app:showAsAction="always"/>


</menu>