<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/linear_layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/iv_image_width"
            android:layout_height="@dimen/iv_image_height"
            android:layout_marginTop="@dimen/iv_margin_top"
            android:scaleType="centerCrop"
            android:src="@drawable/addstudent" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_margin_1"
        android:paddingTop="@dimen/til_padding_top">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_roll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_margin_2">

        <EditText
            android:id="@+id/et_roll_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_roll"

            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_save_data"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/btn_margin_left"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_marginRight="@dimen/btn_margin_right"
        android:background="@drawable/button_skin"
        android:text="@string/btn_text"
        android:textColor="@color/button_text" />


</LinearLayout>
